<?xml version="1.0"?>
<package format="2">
  <name>franka_msgs_archemist</name>
  <version>1.0.0</version>
  <description>TODO</description>

  <license>TODO</license>


  <maintainer email="gabriella.pizzuto@liverpool.ac.uk">GabriellaPizzuto</maintainer>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
